# Yukon

./: CMakeLists.txt  cards.txt  deck.c  deck.h  deckYukon.txt  file.c  file.h  gui.c  gui.h  main  main.c  main.h  shuffle.c  shuffle.h  table.c  table.h
